@@ -2,6 +2,7 @@ User johns
 Date:
 
     Release Version 0.5.1
+    Add commandline support to disable hardware decoder.
     Display frame statistics in plugin menu.
     Fix bug: 100% CPU use during playback.
     Fix bug: audio use 100% CPU during pause.
